# OneLive

./: .gitignore  onelive.py  pyproject.toml  readme.md  requirements-dev.txt  start.bat
.github/workflows/: ci.yml
scripts/: build_exe.py
tests/: test_onelive.py
