[project]
name = "onelive"
version = "2.1.0"
description = "Playful Python runner with original ASCII rickroll fallback"
readme = "readme.md"
requires-python = ">=3.12"
authors = [{ name = "OneLive contributors" }]

[project.scripts]
onelive = "onelive:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL"]
ignore = ["PLR0913"]
